# FinTech-Hackathon

./: CMakeLists.txt  README.md
backend/src/: Graph.h  RiskEngine.h  Storage.h  main.cpp
data/: companies.json  edges.json  transactions.json
frontend/: app.js  index.html  style.css
tests/: risk_tests.cpp
tools/: gen_data.cpp
